# denote

./: .gitignore  BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  DeleteNoteDialog.cpp  DeleteNoteDialog.h  FileManager.cpp  FileManager.h  NewNoteDialog.cpp  NewNoteDialog.h  Note.cpp  Note.h  NoteManager.cpp  NoteManager.h  Observable.h  Observer.h  RenameNoteDialog.cpp  RenameNoteDialog.h  TestBaseWindow.cpp  TestBaseWindow.h  TestNewNote.cpp  TestNewNote.h  TestNewNoteDialog.cpp  TestNewNoteDialog.h  TestNoteManager.h  basewindow.cpp  basewindow.h  deletenotedialog.cpp  deletenotedialog.h  main.cpp  main_tests.cpp
tests/: TestBaseWindow.cpp  TestBaseWindow.h  TestFileManager.cpp  TestFileManager.h  TestNewNoteDialog.cpp  TestNewNoteDialog.h  TestNoteManager.cpp  TestNoteManager.h  main_tests.cpp
ui_files/: DeleteNoteDialog.ui  NewNoteDialog.ui  RenameNoteDialog.ui  basewindow.ui  ui_NewNoteDialog.h
